# QT-OpenGL

./: .gitignore
OpenGL/: CMakeLists.txt  main.cpp
